# Entendre

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  SConscript  SConstruct  batch_performance_test.sh  composite_gpu_perf.cc  default.inc  example.cc  feedforward_perf.cc  neat_xor.cc  neat_xor2.cc  neat_xor_fitnesseval.cc  new_sort_test.cc  performance_tests.cc  proto-neat.cc  proto.cc  train_xor.cc
cmake/utils/: FindCUDA.cmake
glog/: SConscript
glog/src/: logging.cc
include/: CompositeNet.hh  Timer.hh  XorFitness.hh  XorFitnessEvaluator.hh  dummy.hh  insertion_preserving_unordered.hh
libEntendre/: SConscript
libEntendre/include/: CPPNTypes.hh  ConcurrentGPUNeuralNet.hh  ConcurrentNeuralNet.hh  ConsecutiveNeuralNet.hh  Neural.hh  NeuralNet.hh  NeuralNet_CRTP.hh
libEntendre/src/: ConcurrentGPUNeuralNet.cu  ConcurrentNeuralNet.cc  ConsecutiveNeuralNet.cc  NeuralNet.cc
libFeedForward/: SConscript
libFeedForward/src/: Neural.cc
libNeat/: Makefile.inc  SConscript
libNeat/include/: CompositeNet.hh  FitnessEvaluator.hh  Gene.hh  Genome.hh  Hash.hh  Link.hh  Network.hh  NeuralNet.hh  NeuralNetBase.hh  Node.hh  Organism.hh  Population.hh  PopulationBackgroundThread.hh  PopulationHelpers.hh  Random.hh  ReachabilityChecker.hh  Requirements.hh  Species.hh
libNeat/src/: Gene.cc  Genome.cc  Link.cc  Network.cc  NeuralNet.cc  NeuralNetBase.cc  Node.cc  Organism.cc  Population.cc  ReachabilityChecker.cc  python_bindings.cc
libpyneat/: Makefile.inc  SConscript
libpyneat/src/: python_bindings.cc  (+1 more)
performance/: batch_performance_test.sh  performance.py  plot_results.py
scons-tools/: cuda.py
scripts/: doxy.config  mainpage.dox  make_docs.sh
src/: dummy.cc
tests/: CPPNTests.cc  ConstructGenome.cc  GPUTests.cc  GenomeTests.cc  LoadNodeSensor.cc  Makefile.inc  NetworkTests.cc  NodeCount.cc  PopulationBackgroundThreadTest.cc  PopulationTest.cc  SConscript  run_all.cc
(+1 files in other folders)
